[tool.poetry]
name = "hf-diffusers"
version = "0.1.0"
description = ""
authors = ["Matthew Goldey <matthew.goldey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
accelerate = "^0.27.2"
transformers = "^4.38.0"
diffusers = "^0.26.3"
ipython = "^8.21.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
